--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="header_menu">
             <a class="header_menu_link" href="index.html">Home</a>
             <a class="header_menu_link" href="about.html">Sobre mi</a>
-            <a class="header_menu_link" href="curriculum.html">Curriculum</a>
+            <a class="header_menu_link" href="curriculum.html">Curriculuam</a>
         </nav>
     </header>
     <main class="presentacion">
