Realicé cambios en mi información en curriculum y actulicémi foto

--- a/curriculum.html
+++ b/curriculum.html
@@ -17,7 +17,7 @@
     <main class="presentacion">
         <section class="presentacion_contenido">
             <h1 class="presentacion_contenido_titulo">Curriculum Vitae</h1>
-            <p class="presentacion_contenido_parrafo">Presentacion y información principales</p>
+            <p class="presentacion_contenido_parrafo">Estudiante de Ingeniería de Sistemas e Informática en Sexto Ciclo con una formación académica y experiencia práctica en entornos computacionales. Poseo conocimientos en creaciones de formularios por medio de Java. Mi enfoque en aplicaciones Java se complementa con habilidades de comunicación efectiva y empatía, brindando un soporte integral. Busco oportunidades para aplicar más conocimientos y habilidades en un entorno informático y desafiante, contribuyendo en la creación de proyectos o mantenimiento de programas.</p>
             <h2 class="presentacion_contenido_titulo">Experiencias</h2>
             <p class="presentacion_contenido_parrafo">
                 <ul class="presentacion_contenido_parrafo">
@@ -25,10 +25,10 @@
                     <li>Empresa en que trabajó (2019-2020)</li>
                 </ul>
             </p>
-            <h2 class="presentacion_contenido_titulo">Estudios</h2>
+            <h2 class="presentacion_contenido_titulo">Estudios Adicionales</h2>
             <div class="presentacion_contenido_parrafo">
                 <ul class="presentacion_contenido_parrafo">
-                    <li>Curso nombre - Alura Cursos <a href="">con la certificación</a></li>
+                    <li>Curso nombre - Alura Cursos <a target="_blank" href="https://app.aluracursos.com/user/ayairbernalramos/degree-programacion-primeros-pasos-grupo7-one-15788/certificate">con la certificación</a></li>
                     <li>Curso nombre - Alura Cursos <a href="">con la certificación</a></li>
                     <li>Curso nombre - Alura Cursos <a href="">con la certificación</a></li>
                 </ul>
