--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
                 cupidatat non.</p>
         </section>
-        <img class="presentacion_imagen" src="./assets/Imagem.png" alt="Imagen de ana garcia">
+        <img class="presentacion_imagen" src="./assets/DSC_0886-.jpg" alt="Imagen de Ayair">
     </main>
 
     <footer class="footer">
