--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="header_menu">
             <a class="header_menu_link" href="index.html">Home</a>
             <a class="header_menu_link" href="about.html">Sobre mi</a>
-            <a class="header_menu_link" href="curriculum.html">Curriculuam</a>
+            <a class="header_menu_link" href="curriculum.html">Curriculum</a>
         </nav>
     </header>
     <main class="presentacion">
@@ -23,16 +23,16 @@
         
         <div class="presentacion_enlaces">
             <h2 class="presentacion_enlace_subtitulo">Accede a mis redes</h2>
-            <a class="presentacion_enlace_link" href="https://www.linkedin.com/in/ayair-martin-bernal-ramos-588776182/">
+            <a class="presentacion_enlace_link" target="_blank" href="https://www.linkedin.com/in/ayair-martin-bernal-ramos-588776182/">
                 <img src="./assets/linkedin.png" alt="">Linkedin</a>
-            <a class="presentacion_enlace_link" href="https://github.com/Ayair23">
+            <a class="presentacion_enlace_link" target="_blank" href="https://github.com/AyairBernalRamos/">
                 <img src="./assets/github.png" alt="">Github</a>
-            <a class="presentacion_enlace_link" href="https://x.com/AyairMartinBR">
-                <img src="./assets/twitter-novo.png" alt="">X</a>
+            <a class="presentacion_enlace_link" target="_blank" href="https://x.com/AyairMartinBR">
+                <img src="./assets/twitter-novo.png" alt=""></a>
         </div>
         </section>
         
-        <img class="presentacion_imagen" src="./assets/Imagem.png" alt="Imagen de ana garcia">
+        <img class="presentacion_imagen" src="./assets/DSC_0886-.jpg" alt="Imagen de Ayair">
     </main>
     <footer class="footer">
         <p>Desarrollado por @Ayair Martin</p>
